<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Task1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTask1Title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ScrollView
            android:id="@+id/scrollBody"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="90">

            <TextView
                android:id="@+id/txtTaskBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTask1Body"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />
        </ScrollView>

        <Button
            android:id="@+id/btReturn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btReturnToMenu_txt" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>